<resources>
    <string name="app_name">Fragments</string>
    <string name="autumn_nfragment">AUTUMN\nFRAGMENT</string>
    <string name="signal_fade">SHIFT THE VIEWE</string>
    <string name="quote_1">“SOMETIMES WE NEED A DIFFERENT ANGLE.”</string>
    <string name="quote_2">“WHAT IF WE LOOKED AT IT ANOTHER WAY?”</string>
    <string name="choice_1">I FEEL STUCK IN ONE WAY OF THINKING.</string>
    <string name="choice_2">EVERYTHING LOOKS THE SAME.</string>
    <string name="choice_3">I WANT TO SEE THINGS DIFFERENTLY.</string>
</resources>


